--- a/index.html
+++ b/index.html
@@ -9,5 +9,14 @@
 <body>
     <h1>チャーリースパイス</h1>
     <a href="https://www.instagram.com/char.lie3813/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==">チャーリースパイス<br>instagram</a>
+<div class="top_block">
+
+</div>
+<div class="mid_body">
+
+</div>
+<div class="bottom_block">
+    
+</div>
 </body>
 </html>
