Add logo image file and that image to the top_block.

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h1>チャーリースパイス</h1>
     <a href="https://www.instagram.com/char.lie3813/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==">チャーリースパイス<br>instagram</a>
 <div class="top_block">
-
+<img src="images/logo.webp">
 </div>
 <div class="mid_body">
 
