Add gradient to the top block.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <div class="top_block">
-<img src="images/logo.webp" alt="Charlie Spice Curry soup restaraunt logo." height="100" width="auto">
+<img id="top-logo" src="images/logo.webp" alt="Charlie Spice Curry soup restaraunt logo." height="100" width="auto">
 </div>
 <div class="mid_block">
     <h1>チャーリースパイス</h1>
