--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
     <a href="https://www.instagram.com/char.lie3813/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==">チャーリースパイス<br>instagram</a>
 </div>
 <div class="bottom_block">
-    
+    <menu-1>トップ</menu-1>
+    <menu-2>メニュー</menu-2>
+    <menu-3>予約</menu-3>
+    <menu-4>アクセス</menu-4>
 </div>
 </body>
 </html>
