--- a/index.html
+++ b/index.html
@@ -12,8 +12,10 @@
 <top-title>メニュー</top-title>
 </div>
 <div class="mid_block">
-    <h1>チャーリースパイス</h1>
+   <!-- <h1>チャーリースパイス</h1>
     <a href="https://www.instagram.com/char.lie3813/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==">チャーリースパイス<br>instagram</a>
+   -->
+   <embed src="menu.pdf" width="100%" height="100%" />
 </div>
 <div class="bottom_block">
     <menu-1>トップ</menu-1>
