--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
    <embed src="menu.pdf" width="100%" height="100%" />
 </div>
 <div class="bottom_block">
-    <menu-1>トップ</menu-1>
-    <menu-2>メニュー</menu-2>
-    <menu-3>予約</menu-3>
-    <menu-4>アクセス</menu-4>
+    <button>トップ</button>
+    <button>メニュー</button>
+    <button>予約</button>
+    <button>アクセス</button>
 </div>
 </body>
 </html>
