Wrap buttons in the bottom block with anchor tags that link to the main page, for now.

--- a/index.html
+++ b/index.html
@@ -18,10 +18,10 @@
    <embed src="menu.pdf" width="100%" height="100%" />
 </div>
 <div class="bottom_block">
-    <button>トップ</button>
-    <button>メニュー</button>
-    <button>予約</button>
-    <button>アクセス</button>
+    <a href="index.html"><button>トップ</button></a>
+    <a href="index.html"></a><button>メニュー</button></a>
+    <a href="index.html"></a><button>予約</button></a>
+    <a href="index.html"></a><button>アクセス</button></a>
 </div>
 </body>
 </html>
