Delete extra closing anchor tags from buttons in the bottom block. Now links work.

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 </div>
 <div class="bottom_block">
     <a href="index.html"><button>トップ</button></a>
-    <a href="index.html"></a><button>メニュー</button></a>
-    <a href="index.html"></a><button>予約</button></a>
-    <a href="index.html"></a><button>アクセス</button></a>
+    <a href="index.html"><button>メニュー</button></a>
+    <a href="index.html"><button>予約</button></a>
+    <a href="index.html"><button>アクセス</button></a>
 </div>
 </body>
 </html>
