Create a menu page and move the menu pdf there.

--- a/menu.html
+++ b/menu.html
@@ -12,9 +12,7 @@
 <top-title>メニュー</top-title>
 </div>
 <div class="mid_block">
-    <h1>チャーリースパイス</h1>
-    <a href="https://www.instagram.com/char.lie3813/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==">チャーリースパイス<br>instagram</a>
-
+   <embed src="menu.pdf" width="100%" height="100%" />
 </div>
 <div class="bottom_block">
     <a href="index.html"><button>トップ</button></a>
