--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 </div>
 <div class="bottom_block">
-    <a href="index.html"><button>トップ</button></a>
+    <a href="index.html"><button class="active-page">トップ</button></a>
     <a href="menu.html"><button>メニュー</button></a>
     <a href="index.html"><button>予約</button></a>
     <a href="index.html"><button>アクセス</button></a>
