--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 <div class="bottom_block">
     <a href="index.html"><button class="active-page">トップ</button></a>
     <a href="menu.html"><button>メニュー</button></a>
-    <a href="index.html"><button>予約</button></a>
-    <a href="index.html"><button>アクセス</button></a>
+    <a href="yoyaku.html"><button>予約</button></a>
+    <a href="access.html"><button>アクセス</button></a>
 </div>
 </body>
 </html>
