--- a/yoyaku.html
+++ b/yoyaku.html
@@ -15,10 +15,10 @@
     <h1>reservation</h1>
 </div>
 <div class="bottom_block">
-    <a href="index.html"><button class="active-page">トップ</button></a>
+    <a href="index.html"><button>トップ</button></a>
     <a href="menu.html"><button>メニュー</button></a>
-    <a href="index.html"><button>予約</button></a>
-    <a href="index.html"><button>アクセス</button></a>
+    <a href="yoyaku.html"><button class="active-page">予約</button></a>
+    <a href="access.html"><button>アクセス</button></a>
 </div>
 </body>
 </html>
