--- a/access.html
+++ b/access.html
@@ -13,7 +13,12 @@
 </div>
 <div class="mid_block">
     <h1>google map</h1>
-    <div style="max-width:100%;overflow:hidden;color:red;width:100%;height:100%;"><div id="google-maps-canvas" style="height:100%; width:100%;max-width:100%;"><iframe style="height:100%;width:100%;border:0;" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Japan,+Hokkaido,+Hakodate,+Kamiyama,+2+Chome−11−15+す〜ぷかりぃかふぇ+チャーリースパイス&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe></div><a class="google-map-code-enabler" href="https://www.bootstrapskins.com/themes" id="grab-map-info">premium bootstrap themes</a><style>#google-maps-canvas img{max-width:none!important;background:none!important;font-size: inherit;font-weight:inherit;}</style></div>
+    <div class="google_maps">
+        <div id="google-maps-canvas">
+            <iframe class="maps_iframe" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Japan,+Hokkaido,+Hakodate,+Kamiyama,+2+Chome−11−15+す〜ぷかりぃかふぇ+チャーリースパイス&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
+        </div>
+        <a class="google-map-code-enabler" href="https://www.bootstrapskins.com/themes" id="grab-map-info">premium bootstrap themes</a>
+    </div>
 </div>
 <div class="bottom_block">
     <a href="index.html"><button>トップ</button></a>
