--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="top_block">
 <img id="top-logo" src="images/logo.webp" alt="Charlie Spice Curry soup restaraunt logo." height="100" width="auto">
-<top-title>すーぷかりーかふぇ チャーリースパイス</top-title>
+<top-title>すーぷかりーかふぇ`<br>チャーリースパイス</top-title>
 </div>
 <div class="mid_block">
     <h1>チャーリースパイス</h1>
