Fix page titles on acces and yoyaku pages.

--- a/access.html
+++ b/access.html
@@ -9,11 +9,11 @@
 <body>
 <div class="top_block">
 <img id="top-logo" src="images/logo.webp" alt="Charlie Spice Curry soup restaraunt logo." height="100" width="auto">
-<top-title>メニュー</top-title>
+<top-title>アクセス</top-title>
 </div>
 <div class="mid_block">
-    <h1>google map</h1>
     <div class="google_maps">
+        <h1>google map</h1>
         <div id="google-maps-canvas">
             <iframe class="maps_iframe" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Japan,+Hokkaido,+Hakodate,+Kamiyama,+2+Chome−11−15+す〜ぷかりぃかふぇ+チャーリースパイス&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
         </div>
