Add address to the access page.

--- a/access.html
+++ b/access.html
@@ -12,8 +12,13 @@
 <top-title>アクセス</top-title>
 </div>
 <div class="mid_block">
+    <place>
+        <h2>アクセス</h2>
+        北海道函館市神山2-11-15
+
+    </place>
     <div class="google_maps">
-        <h1>google map</h1>
+        <h2>google map</h2>
         <div id="google-maps-canvas">
             <iframe class="maps_iframe" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Japan,+Hokkaido,+Hakodate,+Kamiyama,+2+Chome−11−15+す〜ぷかりぃかふぇ+チャーリースパイス&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
         </div>
