Add other information about the restaurant to the access page.

--- a/access.html
+++ b/access.html
@@ -13,9 +13,17 @@
 </div>
 <div class="mid_block">
     <place>
-        <h2>アクセス</h2>
-        北海道函館市神山2-11-15
-
+        <h2>概要</h2>
+            <p>📞 0138-51-0610
+                <br>
+                北海道函館市神山2-11-15
+                <br>
+                クレジットカード不可
+                <br>
+                16席
+                <br>
+                駐車場有 · 吸煙可
+            </p>
     </place>
     <div class="google_maps">
         <h2>google map</h2>
