Add unicode special symbols to the top half of the access page.

--- a/access.html
+++ b/access.html
@@ -16,13 +16,13 @@
         <h2>概要</h2>
             <p>📞 0138-51-0610
                 <br>
-                北海道函館市神山2-11-15
+                🏠 北海道函館市神山2-11-15
                 <br>
-                クレジットカード不可
+                💳 クレジットカード不可
                 <br>
-                16席
+                🪑 16席
                 <br>
-                駐車場有 · 吸煙可
+                🅿️ 駐車場有 🚬 吸煙可
             </p>
     </place>
     <div class="google_maps">
