Add a call button to the main page.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <div class="mid_block">
     <h1>チャーリースパイス</h1>
     <a href="https://www.instagram.com/char.lie3813/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==">チャーリースパイス<br>instagram</a>
+    <a href="index.html"><button class="phone-button">📞 0138-51-0610</button></a>
 </div>
 <div class="bottom_block">
     <a href="index.html"><button class="active-page">トップ</button></a>
