Add call in button to all the other pages.

--- a/access.html
+++ b/access.html
@@ -31,6 +31,7 @@
             <iframe class="maps_iframe" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Japan,+Hokkaido,+Hakodate,+Kamiyama,+2+Chome−11−15+す〜ぷかりぃかふぇ+チャーリースパイス&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
         </div>
     </div>
+    <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
 </div>
 <div class="bottom_block">
     <a href="index.html"><button>トップ</button></a>
