--- a/menu.html
+++ b/menu.html
@@ -13,6 +13,7 @@
 </div>
 <div class="mid_block">
    <embed src="menu.pdf" width="100%" height="100%" />
+   <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
 </div>
 <div class="bottom_block">
     <a href="index.html"><button>トップ</button></a>
