--- a/yoyaku.html
+++ b/yoyaku.html
@@ -9,10 +9,11 @@
 <body>
 <div class="top_block">
 <img id="top-logo" src="images/logo.webp" alt="Charlie Spice Curry soup restaraunt logo." height="100" width="auto">
-<top-title>アクセス</top-title>
+<top-title>予約</top-title>
 </div>
 <div class="mid_block">
     <h1>reservation</h1>
+    <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
 </div>
 <div class="bottom_block">
     <a href="index.html"><button>トップ</button></a>
