Add an image to the front page.

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 <div class="mid_block">
     <presentation>
         <h1>チャーリースパイス</h1>
+        <img id="top-logo" src="images/ch-interior/cs-interior-1.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
     </presentation>
     <a href="https://www.instagram.com/char.lie3813/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==">チャーリースパイス<br>instagram</a>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
