--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>チャーリースパイス</title>
     <link rel="stylesheet" href="style.css" />
 </head>
-<body>
+<body>  
 <div class="top_block">
 <img id="top-logo" src="images/logo.webp" alt="Charlie Spice Curry soup restaraunt logo." height="100" width="auto">
 <top-title>す〜ぷかりぃかふぇ<br>チャーリースパイス</top-title>
@@ -15,6 +15,8 @@
     <presentation>
         <h1>チャーリースパイス</h1>
         <img class="presentation-image" src="images/ch-interior/cs-interior-1.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
+        <img class="presentation-image" src="images/ch-interior/cs-interior-2.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
+    
     </presentation>
     <a href="https://www.instagram.com/char.lie3813/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==">チャーリースパイス<br>instagram</a>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
