--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>  
-<div class="top_block">
+<div class="top-block">
 <img id="top-logo" src="images/logo.webp" alt="Charlie Spice Curry soup restaraunt logo." height="100" width="auto">
 <top-title>す〜ぷかりぃかふぇ<br>チャーリースパイス</top-title>
 </div>
-<div class="mid_block">
+<div class="mid-block">
     <presentation>
         <h1>チャーリースパイス</h1>
         <img class="presentation-image" src="images/ch-interior/cs-interior-1.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
@@ -21,7 +21,11 @@
     <a href="https://www.instagram.com/char.lie3813/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==">チャーリースパイス<br>instagram</a>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
 </div>
-<div class="bottom_block">
+<div class="bottom-block">
+    <a href="index.html"><button class="active-page">トップ</button></a>
+    <a href="menu.html"><button>メニュー</button></a>
+    <a href="yoyaku.html"><button>予約</button></a>
+    <a href="access.html"><button>アクセス</button></a>
 </div>
 </body>
 </html>
