Swap underbars for hyphens in css properties on all the other pages and in the stylesheet.

--- a/access.html
+++ b/access.html
@@ -7,11 +7,11 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<div class="top_block">
+<div class="top-block">
 <img id="top-logo" src="images/logo.webp" alt="Charlie Spice Curry soup restaraunt logo." height="100" width="auto">
 <top-title>アクセス</top-title>
 </div>
-<div class="mid_block">
+<div class="mid-block">
     <place>
         <h2>概要</h2>
             <p>📞 0138-51-0610
@@ -25,9 +25,9 @@
                 🅿️ 駐車場有 🚬 吸煙可
             </p>
     </place>
-    <div class="google_maps">
+    <div class="google-maps">
         <div id="google-maps-canvas">
-            <iframe class="maps_iframe" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Japan,+Hokkaido,+Hakodate,+Kamiyama,+2+Chome−11−15+す〜ぷかりぃかふぇ+チャーリースパイス&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
+            <iframe class="maps-iframe" frameborder="0" src="https://www.google.com/maps/embed/v1/place?q=Japan,+Hokkaido,+Hakodate,+Kamiyama,+2+Chome−11−15+す〜ぷかりぃかふぇ+チャーリースパイス&key=AIzaSyBFw0Qbyq9zTFTd-tUY6dZWTgaQzuU17R8"></iframe>
         </div>
     </div>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
