--- a/yoyaku.html
+++ b/yoyaku.html
@@ -7,15 +7,15 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-<div class="top_block">
+<div class="top-block">
 <img id="top-logo" src="images/logo.webp" alt="Charlie Spice Curry soup restaraunt logo." height="100" width="auto">
 <top-title>予約</top-title>
 </div>
-<div class="mid_block">
+<div class="mid-block">
     <h1>reservation</h1>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
 </div>
-<div class="bottom_block">
+<div class="bottom-block">
     <a href="index.html"><button>トップ</button></a>
     <a href="menu.html"><button>メニュー</button></a>
     <a href="yoyaku.html"><button class="active-page">予約</button></a>
