--- a/access.html
+++ b/access.html
@@ -32,7 +32,7 @@
     </div>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
 </div>
-<div class="bottom_block">
+<div class="bottom-block">
     <a href="index.html"><button>トップ</button></a>
     <a href="menu.html"><button>メニュー</button></a>
     <a href="yoyaku.html"><button>予約</button></a>
