--- a/index.html
+++ b/index.html
@@ -15,11 +15,16 @@
     <presentation>
         <h1>チャーリースパイス</h1>
         <img class="presentation-image" src="images/ch-interior/cs-interior-1.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
-        <img class="presentation-image" src="images/ch-interior/cs-interior-2.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
-        <img class="presentation-image" src="images/ch-interior/cs-interior-3.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
-        <img class="presentation-image" src="images/ch-interior/cs-interior-4.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
-        <img class="presentation-image" src="images/ch-interior/cs-interior-5.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
-        <img class="presentation-image" src="images/ch-interior/cs-interior-6.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
+       <!-- <img class="presentation-image" src="images/ch-interior/cs-interior-2.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
+       -->
+       <!-- <img class="presentation-image" src="images/ch-interior/cs-interior-3.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
+       -->
+       <!-- <img class="presentation-image" src="images/ch-interior/cs-interior-4.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
+       -->
+       <!-- <img class="presentation-image" src="images/ch-interior/cs-interior-5.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
+       -->
+       <!-- <img class="presentation-image" src="images/ch-interior/cs-interior-6.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
+       -->
     </presentation>
     <a href="https://www.instagram.com/char.lie3813/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==">チャーリースパイス<br>instagram</a>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
