Add a blank form on the yoyaku page.

--- a/yoyaku.html
+++ b/yoyaku.html
@@ -13,6 +13,12 @@
 </div>
 <div class="mid-block">
     <h1>reservation</h1>
+    <!--Maybe get an ait reserve block here.-->
+    <!--Or put in an explanation about that they are open until they run out of soup,
+        and don&t implement any form or ouside reservation system on this page at all.-->
+        <form action="" method="">
+
+        </form>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
 </div>
 <div class="bottom-block">
