On the yoyaku page, add the name and phone number input fields with labels to the form.

--- a/yoyaku.html
+++ b/yoyaku.html
@@ -17,7 +17,11 @@
     <!--Or put in an explanation about that they are open until they run out of soup,
         and don&t implement any form or ouside reservation system on this page at all.-->
         <form action="" method="">
-
+            <label for="first_name">名前:</label>
+            <input type="text">
+            <br>
+            <label for="first_name">電話番号:</label>
+            <input type="text">
         </form>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
 </div>
