--- a/yoyaku.html
+++ b/yoyaku.html
@@ -17,10 +17,10 @@
     <!--Or put in an explanation about that they are open until they run out of soup,
         and don&t implement any form or ouside reservation system on this page at all.-->
         <form action="" method="">
-            <label for="first_name">名前:</label>
+            <label for="name">名前:</label>
             <input type="text">
             <br>
-            <label for="first_name">電話番号:</label>
+            <label for="phone">電話番号:</label>
             <input type="text">
         </form>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
