--- a/yoyaku.html
+++ b/yoyaku.html
@@ -13,15 +13,15 @@
 </div>
 <div class="mid-block">
     <h1>reservation</h1>
-    <!--Maybe get an ait reserve block here.-->
+    <!--Maybe get an air reserve block here.-->
     <!--Or put in an explanation about that they are open until they run out of soup,
         and don&t implement any form or ouside reservation system on this page at all.-->
         <form action="" method="">
             <label for="name">名前:</label>
-            <input type="text">
+            <input type="text" id="name">
             <br>
             <label for="phone">電話番号:</label>
-            <input type="text">
+            <input type="text" id="phone">
         </form>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
 </div>
