--- a/yoyaku.html
+++ b/yoyaku.html
@@ -18,10 +18,10 @@
         and don&t implement any form or ouside reservation system on this page at all.-->
         <form action="" method="">
             <label for="name">名前:</label>
-            <input type="text" id="name">
+            <input type="text" id="name" placeholder="湖小麦子">
             <br>
             <label for="phone">電話番号:</label>
-            <input type="text" id="phone">
+            <input type="text" id="phone" placeholder="080-8743-4126">
         </form>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
 </div>
