--- a/yoyaku.html
+++ b/yoyaku.html
@@ -21,7 +21,7 @@
             <input type="text" id="name" placeholder="湖小麦子">
             <br>
             <label for="phone">電話番号:</label>
-            <input type="text" id="phone" placeholder="080-8743-4126">
+            <input type="text" inputmode="numeric" id="phone" placeholder="080-8743-4126">
         </form>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
 </div>
