--- a/yoyaku.html
+++ b/yoyaku.html
@@ -22,6 +22,8 @@
             <br>
             <label for="phone">電話番号:</label>
             <input type="text" inputmode="numeric" id="phone" placeholder="080-8743-4126">
+            <br>
+            <button type="submit">予約</button>
         </form>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
 </div>
