Style button on the yoyaku page, so it's more visible.

--- a/yoyaku.html
+++ b/yoyaku.html
@@ -23,7 +23,8 @@
             <label for="phone">電話番号:</label>
             <input type="text" inputmode="numeric" id="phone" placeholder="080-8743-4126">
             <br>
-            <button type="submit">予約</button>
+            <br>
+            <button class="yoyaku-button" type="submit">予約</button>
         </form>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
 </div>
