Add class to buttons in the bottom block, to style the class instead of type.

--- a/access.html
+++ b/access.html
@@ -33,9 +33,9 @@
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
 </div>
 <div class="bottom-block">
-    <a href="index.html"><button>トップ</button></a>
-    <a href="menu.html"><button>メニュー</button></a>
-    <a href="yoyaku.html"><button>予約</button></a>
+    <a href="index.html"><button class="nav-button">トップ</button></a>
+    <a href="menu.html"><button class="nav-button">メニュー</button></a>
+    <a href="yoyaku.html"><button class="nav-button">予約</button></a>
     <a href="access.html"><button class="active-page">アクセス</button></a>
 </div>
 </body>
