Add new classes to buttons in the bottom block on the access page.

--- a/access.html
+++ b/access.html
@@ -36,7 +36,7 @@
     <a href="index.html"><button class="nav-button">トップ</button></a>
     <a href="menu.html"><button class="nav-button">メニュー</button></a>
     <a href="yoyaku.html"><button class="nav-button">予約</button></a>
-    <a href="access.html"><button class="active-page">アクセス</button></a>
+    <a href="access.html"><button class="nav-button-active">アクセス</button></a>
 </div>
 </body>
 </html>
