--- a/index.html
+++ b/index.html
@@ -31,9 +31,9 @@
 </div>
 <div class="bottom-block">
     <a href="index.html"><button class="active-page">トップ</button></a>
-    <a href="menu.html"><button>メニュー</button></a>
-    <a href="yoyaku.html"><button>予約</button></a>
-    <a href="access.html"><button>アクセス</button></a>
+    <a href="menu.html"><button class="nav-button">メニュー</button></a>
+    <a href="yoyaku.html"><button class="nav-button">予約</button></a>
+    <a href="access.html"><button class="nav-button">アクセス</button></a>
 </div>
 </body>
 </html>
