Rename class for the active page button on every page.

--- a/yoyaku.html
+++ b/yoyaku.html
@@ -32,7 +32,7 @@
 <div class="bottom-block">
     <a href="index.html"><button class="nav-button">トップ</button></a>
     <a href="menu.html"><button class="nav-button">メニュー</button></a>
-    <a href="yoyaku.html"><button class="active-page">予約</button></a>
+    <a href="yoyaku.html"><button class="nav-button-active">予約</button></a>
     <a href="access.html"><button class="nav-button">アクセス</button></a>
 </div>
 </body>
