--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
 </div>
 <div class="bottom-block">
-    <a href="index.html"><button class="active-page">トップ</button></a>
+    <a href="index.html"><button class="nav-button-active">トップ</button></a>
     <a href="menu.html"><button class="nav-button">メニュー</button></a>
     <a href="yoyaku.html"><button class="nav-button">予約</button></a>
     <a href="access.html"><button class="nav-button">アクセス</button></a>
