--- a/menu.html
+++ b/menu.html
@@ -17,7 +17,7 @@
 </div>
 <div class="bottom-block">
     <a href="index.html"><button class="nav-button">トップ</button></a>
-    <a href="menu.html"><button class="active-page">メニュー</button></a>
+    <a href="menu.html"><button class="nav-button-active">メニュー</button></a>
     <a href="yoyaku.html"><button class="nav-button">予約</button></a>
     <a href="access.html"><button class="nav-button">アクセス</button></a>
 </div>
