--- a/menu.html
+++ b/menu.html
@@ -11,10 +11,13 @@
 <img id="top-logo" src="images/logo.webp" alt="Charlie Spice Curry soup restaraunt logo." height="100" width="auto">
 <top-title>メニュー</top-title>
 </div>
-<div class="mid-block">
-   <embed src="menu.pdf" width="100%" height="100%" />
-   <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
+<div class="round">
+    <div class="mid-block">
+        <embed src="menu.pdf" width="100%" height="100%" />
+        <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
+     </div>
 </div>
+
 <div class="bottom-block">
     <a href="index.html"><button class="nav-button">トップ</button></a>
     <a href="menu.html"><button class="nav-button-active">メニュー</button></a>
