--- a/menu.html
+++ b/menu.html
@@ -12,7 +12,7 @@
 <top-title>メニュー</top-title>
 </div>
 <div class="mid-block">
-   <embed src="menu.pdf" width="100%" height="100%" style="border-radius: 22px; "/>
+   <embed src="menu.pdf" width="100%" height="100%" class="emb-menu"/>
    <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
 </div>
 <div class="bottom-block">
