Add classes to the form elements, to test their elignment.

--- a/yoyaku.html
+++ b/yoyaku.html
@@ -16,10 +16,13 @@
     <!--Maybe get an air reserve block here.-->
     <!--Or put in an explanation about that they are open until they run out of soup,
         and don&t implement any form or ouside reservation system on this page at all.-->
-        <form action="" method="">
-            <br>
-            <label for="name">名前:</label>
-            <input type="text" id="name" placeholder="湖小麦子">
+        <form class="row" action="" method="">
+            <div class="col-25">
+              <label for="name">名前:</label>
+            </div>
+            <div class="col-75">
+              <input type="text" id="name" placeholder="湖小麦子">
+            </div>
             <br>
             <label for="phone">電話番号:</label>
             <input type="text" inputmode="numeric" id="phone" placeholder="080-8743-4126">
