--- a/yoyaku.html
+++ b/yoyaku.html
@@ -24,10 +24,17 @@
               <input type="text" id="name" placeholder="湖小麦子">
             </div>
             <br>
-            <label for="phone">電話番号:</label>
-            <input type="text" inputmode="numeric" id="phone" placeholder="080-8743-4126">
             <br>
             <br>
+            <div class="col-25">
+              <label for="phone">電話番号:</label>
+            </div>
+            <div class="col-75">
+              <input type="text" inputmode="numeric" id="phone" placeholder="080-8743-4126">
+            </div>
+            <br>
+            <br>
+            <br><br><br>
             <button class="yoyaku-button" type="submit">予約</button>
         </form>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
