--- a/index.html
+++ b/index.html
@@ -29,7 +29,12 @@
     <br>
     <a href="https://www.instagram.com/char.lie3813/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==">チャーリースパイス<br>instagram</a>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
+    <br>
+    <reviews>
+        <h3>口コミ</h3>
+    </reviews>
 </div>
+
 <div class="bottom-block">
     <a href="index.html"><button class="nav-button-active">トップ</button></a>
     <a href="menu.html"><button class="nav-button">メニュー</button></a>
