Add placeholders for testimonials on the main page.

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
     <br>
     <reviews>
         <h3>口コミ</h3>
+        <testimonial-1></testimonial-1>
+        <testimonial-2></testimonial-2>
+        <testimonial-3></testimonial-3>
     </reviews>
 </div>
 
