Rename reviews block to testimonials, so that everything is naming is consistent.

--- a/index.html
+++ b/index.html
@@ -30,12 +30,12 @@
     <a href="https://www.instagram.com/char.lie3813/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==">チャーリースパイス<br>instagram</a>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
     <br>
-    <reviews>
+    <rtestimonials>
         <h3>口コミ</h3>
         <testimonial-1></testimonial-1>
         <testimonial-2></testimonial-2>
         <testimonial-3></testimonial-3>
-    </reviews>
+    </testimonials>
 </div>
 
 <div class="bottom-block">
