--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 <body>  
 <div class="top-block">
 <img id="top-logo" src="images/logo.webp" alt="Charlie Spice Curry soup restaraunt logo." height="100" width="auto">
-<top-title>す〜ぷかりぃかふぇ<br>チャーリースパイス</top-title>
+<span class="top-title">す〜ぷかりぃかふぇ<br>チャーリースパイス</span>
 </div>
 <div class="mid-block">
-    <presentation>
+    <div class="presentation">
         <img class="presentation-image" src="images/ch-interior/cs-interior-1.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
        <!-- <img class="presentation-image" src="images/ch-interior/cs-interior-2.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
        -->
@@ -25,17 +25,17 @@
        -->
        <!-- <img class="presentation-image" src="images/ch-interior/cs-interior-6.webp" alt="Charlie Spice restaraunt interior" height="auto" width="100%">
        -->
-    </presentation>
+    </div>
     <br>
     <a href="https://www.instagram.com/char.lie3813/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==">チャーリースパイス<br>instagram</a>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
     <br>
-    <rtestimonials>
+    <div class="testimonials">
         <h3>口コミ</h3>
-        <testimonial-1></testimonial-1>
-        <testimonial-2></testimonial-2>
-        <testimonial-3></testimonial-3>
-    </testimonials>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
 </div>
 
 <div class="bottom-block">
