--- a/access.html
+++ b/access.html
@@ -9,7 +9,7 @@
 <body>
 <div class="top-block">
 <img id="top-logo" src="images/logo.webp" alt="Charlie Spice Curry soup restaraunt logo." height="100" width="auto">
-<top-title>アクセス</top-title>
+<span class="top-title">アクセス</span>
 </div>
 <div class="mid-block">
     <place>
