--- a/menu.html
+++ b/menu.html
@@ -9,7 +9,7 @@
 <body>
 <div class="top-block">
 <img id="top-logo" src="images/logo.webp" alt="Charlie Spice Curry soup restaraunt logo." height="100" width="auto">
-<top-title>メニュー</top-title>
+<span class="top-title">メニュー</span>
 </div>
 <div class="mid-block">
    <embed src="menu.pdf" width="100%" height="100%" class="emb-menu"/>
