Fix typo in the class name of the title in the top block on yoyaku page.

--- a/yoyaku.html
+++ b/yoyaku.html
@@ -9,7 +9,7 @@
 <body>
 <div class="top-block">
 <img id="top-logo" src="images/logo.webp" alt="Charlie Spice Curry soup restaraunt logo." height="100" width="auto">
-<span class="topo-title">予約</span>
+<span class="top-title">予約</span>
 </div>
 <div class="mid-block">
     <h1>reservation</h1>
