Put instagram widget in a div and style it.

--- a/index.html
+++ b/index.html
@@ -30,8 +30,10 @@
     <a href="https://www.instagram.com/char.lie3813/?utm_source=ig_web_button_share_sheet&igshid=OGQ5ZDc2ODk2ZA==">チャーリースパイス<br>instagram</a>
     <a href="tel:0138510610"><button class="phone-button">📞 0138-51-0610</button></a>
     <br>
-    <script class="instagram-widget" src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
-<div class="elfsight-app-e4d52e7f-1882-4f12-9315-37bb12e200af" data-elfsight-app-lazy></div>
+    <div class="instagram-widget">
+      <script src="https://static.elfsight.com/platform/platform.js" data-use-service-core defer></script>
+      <div class="elfsight-app-e4d52e7f-1882-4f12-9315-37bb12e200af" data-elfsight-app-lazy></div>
+    </div>
     <div class="testimonials">
         <h3>口コミ</h3>
         <span></span>
